초기값 지정 reset,js파일 추가, import, export 잘못된 사용 방법 수정

--- a/index.html
+++ b/index.html
@@ -1,154 +1,191 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:url" content="https://linkbrary0304.netlify.app/" />
-  <meta property="og:title" content="Linkbrary" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="/assets/img/png/meta.png" />
-  <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
-  <link rel="stylesheet" href="/assets/CSS/style.css" />
-  <link rel="stylesheet" href="/assets/css/mobile.css" />
-  <title>Linkbrary</title>
-</head>
-<body>
-  <nav class="nav-wrap">
-    <div class="nav-inner">
-      <a href="/">
-        <img src="/assets/img/svg/main-logo.svg" alt="홈으로 연결된 사이트 로고 Linkbrary" />
-      </a>
-      <a class="nav-link btn-color" href="/signin.html">
-        로그인
-      </a>
-    </div>
-  </nav>
-
-  <header class="header-wrap">
-    <div class="header-inner">
-      <h1 class="header-title">
-        <span class="header-title__text">세상의 모든 정보</span>를
-        <br />
-        쉽게 저장하고<br class="tablet-br" /> 관리해 보세요
-      </h1>
-      <a class="header-link btn-color" href="/signup.html">
-        링크 추가하기
-      </a>
-      <div class="header-wrap__img">
-        <img class="header-image" src="/assets/img/png/mainbg.png" alt="링크 검색 이미지" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url" content="https://linkbrary0304.netlify.app/" />
+    <meta property="og:title" content="Linkbrary" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/assets/img/png/meta.png" />
+    <meta
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+    />
+    <link rel="stylesheet" href="/assets/CSS/style.css" />
+    <link rel="stylesheet" href="/assets/css/mobile.css" />
+    <title>Linkbrary</title>
+  </head>
+  <body>
+    <nav class="nav-wrap">
+      <div class="nav-inner">
+        <a href="/">
+          <img
+            src="/assets/img/svg/main-logo.svg"
+            alt="사이트 로고 Linkbrary"
+          />
+        </a>
+        <a class="nav-link btn-color" href="/signin.html"> 로그인 </a>
       </div>
-    </div>
-  </header> 
+    </nav>
 
-  <article class="content-wrap">
-    <!-- content1 -->
-    <section class="card-wrap">
-      <div class="card-inner">
-        <h2 class="card-item__title">
-          <span class="title-1-gradient background-clip-text">
-            원하는 링크</span>를
+    <header class="header-wrap">
+      <div class="header-inner">
+        <h1 class="header-title">
+          <span class="header-title__text">세상의 모든 정보</span>를
+          <br />
+          쉽게 저장하고<br class="tablet-br" />
+          관리해 보세요
+        </h1>
+        <a class="header-link btn-color" href="/signup.html"> 링크 추가하기 </a>
+        <div class="header-wrap__img">
+          <img
+            class="header-image"
+            src="/assets/img/png/mainbg.png"
+            alt="링크 검색 이미지"
+          />
+        </div>
+      </div>
+    </header>
+
+    <article class="content-wrap">
+      <!-- content1 -->
+      <section class="card-wrap">
+        <div class="card-inner">
+          <h2 class="card-item__title">
+            <span class="title-1-gradient background-clip-text">
+              원하는 링크</span
+            >를
             <br class="pc-br" />
             저장하세요
-        </h2>
-        <p class="card-item__text">
-          나중에 읽고 싶은 글, 다시 보고 싶은 영상,
-          <br />
-          사고 싶은 옷, 기억하고 싶은 모든 것을
-          <br />
-          한 공간에 저장하세요.
-        </p>
-      </div>
-      <div class="card-wrap__img"> 
-        <img class="card-item__img" src="/assets/img/png/card1.png" alt="링크 저장 이미지" />
-      </div>
-    </section>
+          </h2>
+          <p class="card-item__text">
+            나중에 읽고 싶은 글, 다시 보고 싶은 영상,
+            <br />
+            사고 싶은 옷, 기억하고 싶은 모든 것을
+            <br />
+            한 공간에 저장하세요.
+          </p>
+        </div>
+        <div class="card-wrap__img">
+          <img
+            class="card-item__img"
+            src="/assets/img/png/card1.png"
+            alt="링크 저장 이미지"
+          />
+        </div>
+      </section>
 
-    <!-- content2 -->
-    <section class="card-wrap">
-      <div class="card-inner">
-        <h2 class="card-item__title">
-          링크를 폴더로
-          <br class="pc-br" />
-          <span class="title-2-gradient background-clip-text">관리</span>하세요
-        </h2>
-        <p class="card-item__text">
-          나만의 폴더를 무제한으로 만들고
-          <br />
-          다양하게 활용할 수 있습니다.
-        </p>
-      </div>
-      <div class="card-wrap__img"> 
-        <img class="card-item__img" src="/assets/img/png/card2.png" alt="폴더 관리 팝업창 이미지" />
-      </div>
-    </section>
+      <!-- content2 -->
+      <section class="card-wrap">
+        <div class="card-inner">
+          <h2 class="card-item__title">
+            링크를 폴더로
+            <br class="pc-br" />
+            <span class="title-2-gradient background-clip-text">관리</span
+            >하세요
+          </h2>
+          <p class="card-item__text">
+            나만의 폴더를 무제한으로 만들고
+            <br />
+            다양하게 활용할 수 있습니다.
+          </p>
+        </div>
+        <div class="card-wrap__img">
+          <img
+            class="card-item__img"
+            src="/assets/img/png/card2.png"
+            alt="폴더 관리 팝업창 이미지"
+          />
+        </div>
+      </section>
 
-    <!-- content3 -->
-    <section class="card-wrap">
-      <div class="card-inner">
-        <h2 class="card-item__title">
-          저장된 링크로
-          <br class="pc-br" />
-          <span class="title-3-gradient background-clip-text">공유</span>해 보세요
-        </h2>
-        <p class="card-item__text">
-          여러 링크를 폴더에 담고 공유할 수 있습니다.
-          <br />
-          가족, 친구, 동료들에게 쉽고 빠르게 링크를
-          <br /> 
-          공유해 보세요.
-        </p>
-      </div>
-      <div class="card-wrap__img"> 
-        <img class="card-item__img" src="/assets/img/png/card3.png" alt="폴더 공유 팝업창 이미지" />
-      </div>
-    </section>
+      <!-- content3 -->
+      <section class="card-wrap">
+        <div class="card-inner">
+          <h2 class="card-item__title">
+            저장된 링크로
+            <br class="pc-br" />
+            <span class="title-3-gradient background-clip-text">공유</span>해
+            보세요
+          </h2>
+          <p class="card-item__text">
+            여러 링크를 폴더에 담고 공유할 수 있습니다.
+            <br />
+            가족, 친구, 동료들에게 쉽고 빠르게 링크를
+            <br />
+            공유해 보세요.
+          </p>
+        </div>
+        <div class="card-wrap__img">
+          <img
+            class="card-item__img"
+            src="/assets/img/png/card3.png"
+            alt="폴더 공유 팝업창 이미지"
+          />
+        </div>
+      </section>
 
-    <!-- content4 -->
-    <section class="card-wrap">
-      <div class="card-inner">
-        <h2 class="card-item__title">
-          저장한 링크로
-          <br class="pc-br"/>
-          <span class="title-4-gradient background-clip-text">검색</span>보세요
-        </h2>
-        <p class="card-item__text">
-          중요한 정보들을 검색으로 쉽게 찾아보세요.
-        </p>
-      </div>
-      <div class="card-wrap__img"> 
-        <img class="card-item__img" src="/assets/img/png/card4.png" alt="검색 이미지" />
-      </div>
-    </section>
-  </article>
+      <!-- content4 -->
+      <section class="card-wrap">
+        <div class="card-inner">
+          <h2 class="card-item__title">
+            저장한 링크로
+            <br class="pc-br" />
+            <span class="title-4-gradient background-clip-text">검색</span
+            >보세요
+          </h2>
+          <p class="card-item__text">
+            중요한 정보들을 검색으로 쉽게 찾아보세요.
+          </p>
+        </div>
+        <div class="card-wrap__img">
+          <img
+            class="card-item__img"
+            src="/assets/img/png/card4.png"
+            alt="검색 이미지"
+          />
+        </div>
+      </section>
+    </article>
 
-  <footer class="footer-wrap">
-    <div class="footer-item">
-      <span class="footer-item__date">
-        ©codeit - 2023
-      </span>
-      <div class="footer-item__link">
-        <a class="footer-item__font" href="/privacy.html">
-          Privacy Policy
-        </a>
-        <a class="footer-item__font" href="/faq.html">
-          FAQ
-        </a>
+    <footer class="footer-wrap">
+      <div class="footer-item">
+        <span class="footer-item__date"> ©codeit - 2023 </span>
+        <div class="footer-item__link">
+          <a class="footer-item__font" href="/privacy.html"> Privacy Policy </a>
+          <a class="footer-item__font" href="/faq.html"> FAQ </a>
+        </div>
+        <div class="footer-item__icon">
+          <a
+            href="https://www.facebook.com/?locale=ko_KR"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="/assets/img/svg/icon-facebook.svg" alt="facebook" />
+          </a>
+          <a
+            href="https://twitter.com/?lang=ko"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="/assets/img/svg/icon-twitter.svg" alt="twitter" />
+          </a>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="/assets/img/svg/icon-youtube.svg" alt="youtube" />
+          </a>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="/assets/img/svg/icon-instagram.svg" alt="instagram" />
+          </a>
+        </div>
       </div>
-      <div class="footer-item__icon">
-        <a href="https://www.facebook.com/?locale=ko_KR" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/svg/icon-facebook.svg" alt="facebook" />
-        </a>
-        <a href="https://twitter.com/?lang=ko" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/svg/icon-twitter.svg" alt="twitter" />
-        </a>
-        <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/svg/icon-youtube.svg" alt="youtube" />
-        </a>
-        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/svg/icon-instagram.svg" alt="instagram" />
-        </a>
-      </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
