--- a/signin.html
+++ b/signin.html
@@ -1,65 +1,89 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/assets/CSS/sign.css" />
-  <link rel="stylesheet" href="/assets/css/mobile.css" />
-  <title>signin</title>
-</head>
-<body class="sign-header-wrap">
-  <div class="sign-header-inner">
-    <div class="sign-header-logo">
-      <a href="/">
-        <img class="header-logo__image" src="/assets/img/svg/sign-logo.svg" alt="사이트 로고 Linkbrary" />
-      </a>
-      <div class="header-logo__line">
-        <p class="header-logo__text">회원이 아니신가요?</p>
-        <a href="/signup.html" class="header-logo__link">회원 가입하기</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/CSS/sign.css" />
+    <link rel="stylesheet" href="/assets/css/mobile.css" />
+    <title>로그인</title>
+  </head>
+  <body class="sign-header-wrap">
+    <div class="sign-header-inner">
+      <div class="sign-header-logo">
+        <a href="/">
+          <img
+            class="header-logo__image"
+            src="/assets/img/svg/sign-logo.svg"
+            alt="사이트 로고 Linkbrary"
+          />
+        </a>
+        <div class="header-logo__line">
+          <p class="header-logo__text">회원이 아니신가요?</p>
+          <a href="/signup.html" class="header-logo__link">회원 가입하기</a>
+        </div>
+      </div>
+
+      <form id="form__inputForm">
+        <div class="sign-wrap">
+          <div class="sign-inner">
+            <label class="sign-label" for="input-email">이메일</label>
+            <input
+              id="input-email"
+              class="sign-input"
+              type="email"
+              name="email"
+            />
+            <div class="email-error-message"></div>
+          </div>
+
+          <div class="sign-inner">
+            <label class="sign-label" for="input-pw">비밀번호</label>
+            <div class="sign-pw">
+              <input
+                id="input-pw"
+                class="sign-input"
+                type="password"
+                name="password"
+              />
+              <button class="sign-pw__eye-btn" type="button">
+                <img
+                  class="eye-change"
+                  src="/assets/img/svg/eye-off.svg"
+                  alt="비밀번호 감추기 버튼"
+                />
+              </button>
+            </div>
+            <div class="pw-error-message"></div>
+          </div>
+        </div>
+        <button class="sign-btn btn-color" type="submit">로그인</button>
+      </form>
+    </div>
+
+    <div class="social-sign">
+      <p class="social-sign__title">소셜 로그인</p>
+      <div class="social-sign__inner">
+        <a href="https://www.google.com/">
+          <div class="social-sign__icon">
+            <img
+              class="social-sign__icon-img"
+              src="/assets/img/svg/social-icon-google.png"
+              alt="google로 로그인하기"
+            />
+          </div>
+        </a>
+        <a href="https://www.kakaocorp.com/page/">
+          <div class="social-sign__icon">
+            <img
+              class="social-sign__icon-img"
+              src="/assets/img/svg/social-icon-kakao.png"
+              alt="kakao로 로그인하기"
+            />
+          </div>
+        </a>
       </div>
     </div>
 
-    <form id="form__inputForm">
-      <div class="sign-wrap">
-        <div class="sign-inner">
-          <label class="sign-label" for="input-email">이메일</label>
-          <input id="input-email" class="sign-input" type="email" name="email" />
-          <div class="email-error-message"></div>
-        </div>
-        
-        <div class="sign-inner">
-          <label class="sign-label" for="input-pw">비밀번호</label>
-          <div class="sign-pw">
-            <input id="input-pw" class="sign-input" type="password" name="password" />
-            <button class="sign-pw__eye-btn" type="button">
-              <img class="eye-change" src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기 버튼" />
-            </button>
-          </div>
-          <div class="pw-error-message"></div>
-        </div>
-      </div> 
-      <button class="sign-btn btn-color" type="submit">로그인</button>
-    </form>
-  </div>
-  
-  <div class="social-sign">
-    <p class="social-sign__title">소셜 로그인</p> 
-    <div class="social-sign__inner">
-      <a href="https://www.google.com/">
-        <div class="social-sign__icon">
-          <img class="social-sign__icon-img" src="/assets/img/svg/social-icon-google.png" alt="google로 로그인하기" />
-        </div>
-      </a>
-      <a href="https://www.kakaocorp.com/page/">
-        <div class="social-sign__icon">
-          <img class="social-sign__icon-img" src="/assets/img/svg/social-icon-kakao.png" alt="kakao로 로그인하기" />
-        </div>
-      </a>
-    </div>
-  </div>
-
-  <script type="module" src="/assets/js/login.js"></script>
-  <script type="module" src="/assets/js/check.js"></script>
-  <script type="module" src="/assets/js/eye.js"></script>
-</body>
+    <script type="module" src="/assets/js/signin.js"></script>
+  </body>
 </html>
