--- a/signin.html
+++ b/signin.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linkbrary</title>
-    <link rel="stylesheet" href="/static/css/signin.css" />
-</head>
-<body>
-    <div class="signinContainor">
-        <div class="login">
-            <div class="area1">
-                <a href="/"><img src="/static/img/logo.svg" alt="LinkbraryLogo"></a>
-                <p>회원이 아니신가요? <a href="/signup.html" class="signupBtn">회원 가입하기</a></p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Linkbrary</title>
+        <link rel="stylesheet" href="/src/css/signin.css" />
+    </head>
+    <body>
+        <div class="signinContainor">
+            <div class="login">
+                <div class="area1">
+                    <a href="/"><img src="/src/img/logo.svg" alt="LinkbraryLogo" /></a>
+                    <p>
+                        회원이 아니신가요?
+                        <a href="/signup.html" class="signupBtn">회원 가입하기</a>
+                    </p>
+                </div>
+                <div class="area2">
+                    <label class="label emailTag">
+                        <p>이메일</p>
+                        <input class="id" type="text" name="id" placeholder="이메일 입력" />
+                    </label>
+                    <label class="label passwordTag">
+                        <p>비밀번호</p>
+                        <input class="password" type="password" name="password" placeholder="비밀번호 입력" />
+                        <img src="/src/img/noeyes.svg" alt="비밀번호 보기" class="eyes password-eyes" />
+                    </label>
+                </div>
+                <button class="loginBtn">로그인</button>
             </div>
-            <div class="area2">
-                <label class="label emailTag">
-                    <p>이메일</p>
-                    <input class='id' type="text" name="id" placeholder="이메일 입력">
-                </label>
-                <label class="label passwordTag">
-                    <p>비밀번호</p>
-                    <input class='password' type="password" name="password" placeholder="비밀번호 입력">
-                    <img src="/static/img/noeyes.svg" alt="비밀번호 보기" class="eyes password-eyes">
-                </label>
+            <div class="snsLogin">
+                <p>소셜 로그인</p>
+                <div class="snsIcon">
+                    <a href="https://www.google.com/" class="googleLogin">
+                        <img src="/src/img/googleLogin.png" alt="구글 로그인" />
+                    </a>
+                    <a href="https://www.kakaocorp.com/page/" class="kakaoLogin">
+                        <img src="/src/img/kakaoLogin.png" alt="카카오 로그인" />
+                    </a>
+                </div>
             </div>
-            <button class="loginBtn">로그인</button>
         </div>
-        <div class="snsLogin">
-            <p>소셜 로그인</p>
-            <div class="snsIcon">
-                <a href="https://www.google.com/" class="googleLogin">
-                    <img src="/static/img/googleLogin.png" alt="구글 로그인">
-                </a>
-                <a href="https://www.kakaocorp.com/page/" class="kakaoLogin">
-                    <img src="/static/img/kakaoLogin.png" alt="카카오 로그인">
-                </a>
-            </div>
-        </div>
-
-    </div>
-    <script type="module" src="./static/script/signin.js"></script>
-</body>
+        <script type="module" src="./src/script/signin.js"></script>
+    </body>
 </html>
