--- a/signup.html
+++ b/signup.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linkbrary</title>
-    <link rel="stylesheet" href="/static/css/signup.css" />
-</head>
-<body>
-    <div class="signupContainor">
-        <div class="signup">
-            <div class="area1">
-                <a href="/"><img src="/static/img/logo.svg" alt="LinkbraryLogo"></a>
-                <p>이미 회원이신가요? <a href="/signin.html" class="signinBtn">로그인 하기</a></p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Linkbrary</title>
+        <link rel="stylesheet" href="/src/css/signup.css" />
+    </head>
+    <body>
+        <div class="signupContainor">
+            <div class="signup">
+                <div class="area1">
+                    <a href="/"><img src="/src/img/logo.svg" alt="LinkbraryLogo" /></a>
+                    <p>
+                        이미 회원이신가요?
+                        <a href="/signin.html" class="signinBtn">로그인 하기</a>
+                    </p>
+                </div>
+                <div class="area2">
+                    <label class="label emailTag">
+                        <p>이메일</p>
+                        <input class="id" type="text" name="id" placeholder="이메일 입력" />
+                    </label>
+                    <label class="label passwordTag">
+                        <p>비밀번호</p>
+                        <input class="password" type="password" name="password" placeholder="비밀번호 입력" />
+                        <img src="/src/img/noeyes.svg" class="eyes password-eyes" alt="비밀번호" />
+                    </label>
+                    <label class="label verifyTag">
+                        <p>비밀번호 확인</p>
+                        <input
+                            class="verify-password"
+                            type="password"
+                            name="passwordCheck"
+                            placeholder="비밀번호 확인"
+                        />
+                        <img src="/src/img/noeyes.svg" class="eyes verify-eyes" alt="비밀번호 확인" />
+                    </label>
+                </div>
+                <button class="signupBtn">회원가입</button>
             </div>
-            <div class="area2">
-                <label class="label emailTag">
-                    <p>이메일</p>
-                    <input class="id" type="text" name="id" placeholder="이메일 입력">
-                </label>
-                <label class="label passwordTag">
-                    <p>비밀번호</p>
-                    <input class="password" type="password" name="password" placeholder="비밀번호 입력">
-                    <img src="/static/img/noeyes.svg" class="eyes password-eyes" alt="비밀번호 보기">
-                </label>
-                <label class="label verifyTag">
-                    <p>비밀번호 확인</p>
-                    <input class="verify-password" type="password" name="passwordCheck" placeholder="비밀번호 확인">
-                    <img src="/static/img/noeyes.svg" class="eyes verify-eyes" alt="비밀번호 보기">
-                </label>
+            <div class="snsSignup">
+                <p>다른 방식으로 가입하기</p>
+                <div class="signupIcon">
+                    <a href="https://www.google.com/" class="googleSignup">
+                        <img src="/src/img/googleLogin.png" alt="구글 회원가입" />
+                    </a>
+                    <a href="https://www.kakaocorp.com/page/" class="kakaoSignup">
+                        <img src="/src/img/kakaoLogin.png" alt="카카오 회원가입" />
+                    </a>
+                </div>
             </div>
-            <button class="signupBtn">회원가입</button>
         </div>
-        <div class="snsSignup">
-            <p>다른 방식으로 가입하기</p>
-            <div class="signupIcon">
-                <a href="https://www.google.com/" class="googleSignup">
-                    <img src="/static/img/googleLogin.png" alt="구글 회원가입">
-                </a>
-                <a href="https://www.kakaocorp.com/page/" class="kakaoSignup">
-                    <img src="/static/img/kakaoLogin.png" alt="카카오 회원가입">
-                </a>
-            </div>
-        </div>
-    </div>
-    <script type="module" src="./static/script/signup.js"></script>
-</body>
+        <script type="module" src="./src/script/signup.js"></script>
+    </body>
 </html>
