refactor(mentor): 모듈화 진행

--- a/signin.html
+++ b/signin.html
@@ -38,8 +38,8 @@
               비밀번호<br>
               <input class="pwd-input" type="password">       
             </label>
-            <button class="pwd-eye-off">
-              <img id="eyeOnOff" src="images/eye-off.svg" alt="eye-off">
+            <button type="button" class="pwd-eye-off">
+              <img class="eyeOnOff" src="images/eye-off.svg" alt="eye-off">
             </button>
             <p class="error-msg pwd-error hide"></p>
           </li>
