--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
       </h1>
       <h2>
         이미 회원이신가요?
-        <a href="./signup.html">로그인하기</a>
+        <a href="./signin.html">로그인하기</a>
       </h2>
     </div>
     <div class="input-form">
