--- a/signin.html
+++ b/signin.html
@@ -41,7 +41,7 @@
             </div>
           </label>
         </form>
-        <a href="/index.html"><button class="btn-large" id="singin-btn">로그인</button></a>
+        <button class="btn-large" id="singin-btn">로그인</button>
       </div>
       <div class="Social-login">
         <h6>소셜 로그인</h6>
@@ -52,6 +52,6 @@
       </div>
     </div>
   </section>
-  <script src="signin.js"></script>
+  <script type="module" src="signin.js"></script>
 </body>
 </html> 
