--- a/signup.html
+++ b/signup.html
@@ -51,7 +51,7 @@
             </div>
           </label>
         </form>
-        <a href="/index.html"><button class="btn-large">회원가입</button></a>
+        <button class="btn-large">회원가입</button>
       </div>
       <div class="Social-login">
         <h6>다른 방식으로 가입하기</h6>
@@ -62,6 +62,6 @@
       </div>
     </div>
   </section>
-  <script src="signup.js"></script>
+  <script type="module" src="signup.js"></script>
 </body>
 </html> 
