6주차 위클리 미션 적용

--- a/signup.html
+++ b/signup.html
@@ -24,16 +24,16 @@
       </p>
     </header>
     <div class="sign-box">
-      <form class="sign-form">
+      <form id="form" class="sign-form">
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" id="email"/>
+            <input id="email" class="sign-input" />
             <p id="email-error-message" class="error-message"></p>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input" type="password" id="password"/>
+            <input id="password" class="sign-input" type="password" />
             <p id="password-error-message" class="error-message"></p>
             <button id="password-toggle" class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
@@ -41,9 +41,9 @@
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호 확인</label>
-            <input class="sign-input" type="password" id="checkpw"/>
-            <p id="checkpw-error-message" class="error-message"></p>
-            <button id="checkpw-toggle" class="eye-button" type="button">
+            <input id="confirm-password" class="sign-input" type="password" />
+            <p id="confirm-password-error-message" class="error-message"></p>
+            <button id="confirm-password-toggle" class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
           </div>
@@ -62,6 +62,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="src/signup.js"></script>
+    <script type="module" src="./src/signup.js"></script>
   </body>
 </html>
