--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-
-  <!-- font: abel -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-  <!-- font: acme -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
-  
+  <meta charset="utf-8">
+  <title>Linkbrary</title>
   <!-- og : 페이스북, 카카오톡 미완성
   <meta property="og:image" content="">
   <meta property="og:title" content="Linkbrary">
@@ -31,124 +22,119 @@
       content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
   <meta name="twitter:card" content=""> -->
 
-
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style-landing.css">
-
+  <link
+  rel="stylesheet"
+  type="text/css"
+  href="https://cdn.jsdelivr.net/npm/pretendard@1.3.9/dist/web/static/pretendard.min.css">
+  <link rel="stylesheet" href="./src/landing.css">
   <title>Linkbrary</title>
 </head>
 <body>
-  <header>
-    <div class="nav">
-      <a class="nav-logo" href="./landing.html">
+<!-- nav -->
+  <nav>
+    <div class="gnb">
+      <a class="logo" href="./index.html">
+        <img class="logo" src="./images/logo.svg" alt="홈으로 연결된 로고">
       </a>
-      <a class="nav-button" href="./signin/signin.html">로그인</a>
+      <a class="cta cta-short" href="./signin.html">
+        <!-- cta : call to action -->
+        <span>로그인</span>
+      </a>
     </div>
-    <div class="head">
-      <h1 class="head-text">
-        <span class="head-text-gradiant">세상의 모든 정보</span>를<br>
-        쉽게 저장하고<br class="break-mobile">
-        저장해 보세요
+  </nav>
+<!-- header -->
+  <header>
+    <div class="header-box">
+      <h1 class="slogan">
+        <span class="slogan-gradiant background-clip-text">
+          세상의 모든 정보</span>를<br>
+        쉽게 저장하고 <br class="line-break-mobile">관리해 보세요
       </h1>
-      <a class="head-button" href="./signup/">
-        링크 추가하기
+      <a class="cta cta-long" href="./signup/">
+        <span>링크 추가하기</span>
       </a>
-      <div class="head-image">
-      </div>
+      <img class="hero-image" src="./images/image-hero.png" alt="서비스 소개 이미지">
     </div>
   </header>
-  <main>
-    <section class="contents">
-      <div class="contents-textbox">
-        <h2 class="contents-text-title">
-          <span class="contents-text-gradient first">원하는 링크</span>를<br class="break-not-mobile">
-          저장하세요
-        </h2>
-        <p class="contents-text-small">
-          나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br class="break-not-mobile">
-          사고 싶은 옷, 기억하고 싶은 모든 것을<br class="break-not-mobile">
-          한 공간에 저장하세요.
-        </p>
-      </div>
-      <div class="contents-image" alt="이미지-링크" style="background-image: url(./images/img1.svg);">
-      </div>
+<!-- article -->
+  <article>
+    <section>
+      <h2 class="title">
+        <span class="title-1-gradient background-clip-text">
+        원하는 링크</span>를<br class="line-break-pc-tablet">
+        저장하세요
+      </h2>
+      <p class="description">
+        나중에 읽고 싶은 글, 다시 보고 싶은 영상,
+        <br class="line-break-pc-tablet">
+        사고 싶은 옷, 기억하고 싶은 모든 것을
+        <br class="line-break-pc-tablet">
+        한 공간에 저장하세요.
+      </p>
+      <img src="./images/image1.png" class="content-image" alt="서비스 설명">
     </section>
-
-    <section class="contents">
-      <div class="contents-image" alt="이미지-관리" style="background-image: url('./images/img2.svg');">
-      </div>
-      <div class="contents-textbox">
-        <h2 class="contents-text-title">
-          링크를 폴더로<br class="break-not-mobile">
-          <span class="contents-text-gradient second">관리</span>하세요
-        </h2>
-        <p class="contents-text-small">
-          나만의 폴더를 무제한으로 만들고<br class="break-not-mobile">
-          다양하게 활용할 수 있습니다.
-        </p>
-      </div>
+    <section>
+      <h2 class="title">
+        링크를 폴더로<br class="line-break-pc-tablet">
+        <span class="title-2-gradient background-clip-text">관리</span>하세요
+      </h2>
+      <p class="description">
+        나만의 폴더를 무제한으로 만들고
+        <br class="line-break-pc-tablet">
+        다양하게 활용할 수 있습니다.
+      </p>
+      <img src="./images/image2.png" class="content-image" alt="서비스 설명">
     </section>
-
-    <section class="contents">
-      <div class="contents-textbox">
-        <h2 class="contents-text-title">
-          저장한 링크를<br class="break-not-mobile">
-          <span class="contents-text-gradient third">공유</span>해보세요
+    <section>
+        <h2 class="title">
+          저장한 링크를<br class="line-break-pc-tablet">
+          <span class="title-3-gradient background-clip-text">공유</span>해보세요
         </h2>
-        <p class="contents-text-small">
-          여러 링크를 폴더에 담고 공유할 수 있습니다.<br class="break-not-mobile">
-          가족, 친구, 동료들에게 쉽고 빠르게 링크를<br class="break-not-mobile">
+        <p class="description">
+          여러 링크를 폴더에 담고 공유할 수 있습니다.<br class="line-break-pc-tablet">
+          가족, 친구, 동료들에게 쉽고 빠르게 링크를<br class="line-break-pc-tablet">
           공유해 보세요.
         </p>
-      </div>
-      <div class="contents-image" alt="이미지-공유" style="background-image: url(./images/img3.svg);">
-      </div>
+        <img src="./images/image3.png" class="content-image" alt="서비스 설명">
     </section>
-
-    <section class="contents">
-      <div class="contents-image" alt="이미지-검색" style="background-image: url(./images/img4.svg);">
-      </div>
-      <div class="contents-textbox">
-        <h2 class="contents-text-title">
-          저장한 링크를<br class="break-not-mobile">
-          <span class="contents-text-gradient fourth">검색</span>해보세요
-        </h2>
-        <p class="contents-text-small">
-          중요한 정보들을 검색으로 쉽게 찾아보세요.
-        </p>
-      </div>
+    <section>
+      <h2 class="title">
+        저장한 링크를<br class="line-break-pc-tablet">
+        <span class="title-4-gradient background-clip-text">검색</span>해보세요
+      </h2>
+      <p class="description">
+        중요한 정보들을 검색으로 쉽게 찾아보세요.
+      </p>
+      <img src="./images/image4.png" class="content-image" alt="서비스 설명">
     </section>
-  </main>
-
+  </article>
+<!-- footer -->
   <footer>
-    <section class="info">
-      <div class="info-box">
-        <div class="info-author">
-          ©codeit - 2023
-        </div>
-        <div>
-          <div class="info-description">
-            <a href="./privacy/Privacy.html">Privacy Police</a>
-            <a href="./faq/Faq.html">FAQ</a>
-          </div>
+    <div class="footer-box">
+      <span class="copyright">
+        ©codeit - 2023
+      </span>
+      <div>
+        <div class="footer-links">
+          <a class="footer-link" href="privacy.html">Privacy Police</a>
+          <a class="footer-link" href="faq.html">FAQ</a>
         </div>
       </div>
-      <div class="info-sns">
-        <a href="">
+      <div class="sns">
+        <a href="" target="_blank" alt="facebook 홈 연결">
           <img alt="facebook" src="./images/icon_facebook.svg">
         </a>
-        <a href="">
+        <a href="" target="_blank" alt="twitter 홈 연결">
           <img alt="twitter" src="./images/icon_twitter.svg">
         </a>
-        <a href="">
+        <a href="" target="_blank" alt="youtube 홈 연결">
           <img alt="youtube" src="./images/icon_youtube.svg">
         </a>
-        <a href="">
+        <a href="" target="_blank" alt="instagram 홈 연결">
           <img alt="instagram" src="./images/icon_instagram.svg">
         </a>
-      </div>
-    </section>
-
+    </div>
+  </div>
   </footer>
 </body>
 </html>
