--- a/mission/signin.html
+++ b/mission/signin.html
@@ -41,7 +41,7 @@
               <button
                 class="eye-button"
                 type="button"
-                id="showPassword"
+                id="show-password"
               ></button>
             </div>
             <p class="error-msg" id="pwd-error"></p>
@@ -53,10 +53,10 @@
         <span class="sns-text">소셜 로그인</span>
         <div class="sns-links">
           <a class="sns-link google-link" href="https://www.google.com/">
-            <img src="./images/google.png" />
+            <img src="./images/google.png" alt="구글 로그인" />
           </a>
           <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
-            <img src="./images/kakao.svg" />
+            <img src="./images/kakao.svg" alt="카카오톡 로그인" />
           </a>
         </div>
       </div>
