--- a/mission/signup.html
+++ b/mission/signup.html
@@ -41,7 +41,7 @@
               <button
                 class="eye-button"
                 type="button"
-                id="showPassword"
+                id="show-password"
               ></button>
             </div>
             <p class="error-msg" id="pwd-error"></p>
@@ -52,16 +52,16 @@
               <input
                 class="sign-input"
                 type="password"
-                name="passwordCheck"
-                id="passwordCheck"
+                name="password-check"
+                id="password-check"
               />
               <button
                 class="eye-button"
                 type="button"
-                id="showPasswordCheck"
+                id="show-password-check"
               ></button>
             </div>
-            <p class="error-msg" id="pwdCheckerError"></p>
+            <p class="error-msg" id="pwd-checker-error"></p>
           </div>
         </div>
         <button class="sign-button" type="button">회원가입</button>
@@ -70,10 +70,10 @@
         <span class="sns-text">다른 방식으로 가입하기</span>
         <div class="sns-links">
           <a class="sns-link google-link" href="https://www.google.com/">
-            <img src="./images/google.png" />
+            <img src="./images/google.png" alt="구글 로그인" />
           </a>
           <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
-            <img src="./images/kakao.svg" />
+            <img src="./images/kakao.svg" alt="카카오톡 로그인" />
           </a>
         </div>
       </div>
