--- a/signin.html
+++ b/signin.html
@@ -58,6 +58,6 @@
       </div>
     </div>
   </div>
-  <script type="module" src="./src/signin.js"></script>
+  <script type="module" src="./src/singin.js"></script>
 </body>
 </html>
