--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./reset.css" />
-  <link rel="stylesheet" href="./utils.css" />
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="./css/utils.css" />
   <title>Linkbrary</title>
 </head>
 
