--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
     <section class="section">
       <div class="content">
         <div class="title">
-          <a href="main.html">
+          <a href="/">
             <img class="logo-img" src="img/logo.svg" alt="" />
           </a>
           <div class="question">
@@ -28,7 +28,7 @@
           <div class="input__section">
             <label class="text">이메일</label>
             <input id="email" class="user-input" type="email" name="email" />
-            <div id="email-errorText" class="errortext error"></div>
+            <div id="email-errorText" class="error-text error"></div>
           </div>
           <div class="input__section password-section">
             <label class="text">비밀번호</label>
@@ -39,7 +39,7 @@
               name="password"
             />
             <i class="fa fa-eye fa-lg"></i>
-            <div id="password-errorText" class="errortext error"></div>
+            <div id="password-errorText" class="error-text error"></div>
           </div>
           <div class="input__section password-section">
             <label class="text">비밀번호 확인</label>
@@ -50,7 +50,7 @@
               name="verifyPassword"
             />
             <i class="fa fa-eye fa-lg"></i>
-            <div id="password-confirm-errorText" class="errortext error"></div>
+            <div id="password-confirm-errorText" class="error-text error"></div>
           </div>
           <button type="submit" class="signup">회원가입</button>
         </form>
@@ -68,9 +68,8 @@
       </div>
     </section>
     <script type="module" src="JS/email.js"></script>
-    <script type="module" src="JS/password.js"></script>
+    <script type="module" src="JS/signup-password.js"></script>
     <script type="module" src="JS/signup.js"></script>
     <script src="JS/passwordToggle.js"></script>
   </body>
 </html>
-<!--  -->
