--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           alt="홈으로 연결된 Linkbrary 로고"
         />
       </a>
-      <a class="cta cta-short" href="./login/signin.html">
+      <a class="cta cta-short" href="./pages/signin/signin.html">
         <span>로그인</span>
       </a>
     </nav>
@@ -61,7 +61,7 @@
           <br />
           쉽게 저장하고 관리해 보세요
         </h1>
-        <a class="cta cta--long" href="./signup/signup.html">
+        <a class="cta cta--long" href="./pages/signup/signup.html">
           <span>링크 추가하기</span>
         </a>
         <img
