--- a/pages/folder/folder.html
+++ b/pages/folder/folder.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>folder</title>
   </head>
-  <body></body>
+  <body>
+    <p>폴더</p>
+  </body>
 </html>
