--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -14,19 +14,19 @@
     />
 
     <link rel="stylesheet" href="./signup.css" />
-    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="../../styles/global.css" />
   </head>
   <body>
     <header>
       <a class="logo-link" href="../index.html">
         <img
           class="header-logo"
-          src="../assets/images/logo.svg"
+          src="../../assets/images/logo.svg"
           alt="홈으로 연결된 Linkbrary 로고"
         />
       </a>
       <p class="header-message">
-        이미 회원이신가요?<a class="header-link" href="../login/signin.html"
+        이미 회원이신가요?<a class="header-link" href="../signin/signin.html"
           >로그인 하기</a
         >
       </p>
@@ -43,7 +43,7 @@
             <label class="form-group__label">비밀번호</label>
             <input class="form-group__password" type="password" />
             <button class="form-group__eye-button" type="button">
-              <img src="../assets/images/eye-off.svg" />
+              <img src="../../assets/images/eye-off.svg" />
             </button>
             <p class="form-group__error-message--password"></p>
           </div>
@@ -51,7 +51,7 @@
             <label class="form-group__label">비밀번호 확인</label>
             <input class="form-group__password-confirm" type="password" />
             <button class="form-group__eye-button" type="button">
-              <img src="../assets/images/eye-off.svg" />
+              <img src="../../assets/images/eye-off.svg" />
             </button>
             <!-- TODO : CSS 클래스이름 바꿔서 CSS,자바스크립트도 만들어야 함 -->
             <p class="form-group__error-message--password-confirm"></p>
@@ -65,10 +65,10 @@
         <span class="sns-text">다른 방식으로 가입하기</span>
         <div class="sns-links">
           <a class="sns-link google-link" href="https://www.google.com/">
-            <img src="../assets/images/google.png" />
+            <img src="../../assets/images/google.png" />
           </a>
           <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
-            <img src="../assets/images/kakao.svg" />
+            <img src="../../assets/images/kakao.svg" />
           </a>
         </div>
       </div>
