--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -72,6 +72,6 @@
         </div>
       </div>
     </div>
-    <script src="./signup.js"></script>
+    <script src="./signup.js" type="module"></script>
   </body>
 </html>
