Refactor(mentor): css->module.css

--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta property="og:title" content="Linkbrary" />
-        <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
-        <meta
-            property="og:image"
-            content="https://www.freeiconspng.com/uploads/links-icon-30.jpg"
-        />
-        <meta property="og:url" content="https://linkbrary-hyejean.netlify.app" />
-        <meta property="og:type" content="website" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="Linkbrary" />
-        <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
-        <meta
-            name="twitter:image"
-            content="https://www.freeiconspng.com/uploads/links-icon-30.jpg"
-        />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>Linkbrary</title>
-        ``````
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Linkbrary" />
+    <meta
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+    />
+    <meta
+      property="og:image"
+      content="https://www.freeiconspng.com/uploads/links-icon-30.jpg"
+    />
+    <meta property="og:url" content="https://linkbrary-hyejean.netlify.app" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Linkbrary" />
+    <meta
+      name="twitter:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.freeiconspng.com/uploads/links-icon-30.jpg"
+    />
+    <title>Linkbrary</title>
+    ``````
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
