--- a/signup/signup.html
+++ b/signup/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <title>signin</title>
@@ -14,10 +14,12 @@
     <div class="sign-container">
       <header>
         <a class="logo-link" href="../index.html">
-          <img class="header-logo" src="../image/Linkbrary.svg"/>
+          <img class="header-logo" src="../image/Linkbrary.svg" />
         </a>
         <p class="header-message">
-          이미 회원이신가요?<a class="header-link" href="../signin/signin.html">로그인 하기</a>
+          이미 회원이신가요?<a class="header-link" href="../signin/signin.html"
+            >로그인 하기</a
+          >
         </p>
       </header>
       <div class="sign-box">
@@ -42,15 +44,23 @@
               </button>
             </div>
           </div>
-          <button class="login-button" type="submit">회원가입</button>
+          <button class="btn-primary" id="loginButton" type="submit">
+            회원가입
+          </button>
         </form>
         <div class="social-login_group">
           <span class="social-login-text">다른 방식으로 가입하기</span>
           <div class="social-login-buttons">
-            <a class="social-login-button google-link" href="https://www.google.com/">
+            <a
+              class="social-login-button google-link"
+              href="https://www.google.com/"
+            >
               <img src="../image/google icon.png" />
             </a>
-            <a class="social-login-button kakao-link" href="https://www.kakaocorp.com/page/">
+            <a
+              class="social-login-button kakao-link"
+              href="https://www.kakaocorp.com/page/"
+            >
               <img src="../image/kakao icon.png" />
             </a>
           </div>
