--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta property="og:title" content="Linkbrary" />
         <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
-        <meta
-            property="og:image"
-            content="https://www.freeiconspng.com/uploads/links-icon-30.jpg"
-        />
+        <meta property="og:image" content="https://ibb.co/cgDjBG1" />
         <meta property="og:url" content="https://linkbrary-hyejean.netlify.app" />
         <meta property="og:type" content="website" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="Linkbrary" />
-        <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
-        <meta
-            name="twitter:image"
-            content="https://www.freeiconspng.com/uploads/links-icon-30.jpg"
-        />
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
         <title>Linkbrary</title>
     </head>
