--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.1/kakao.min.js"
+    integrity="sha384-kDljxUXHaJ9xAb2AzRd59KxjrFjzHa5TAoFQ6GbYTCAG0bjM55XohjjDT7tDDC01"
+    crossorigin="anonymous"></script>
   <div id="root"></div>
 </body>
 
