--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <title>Linkbrary</title>
   </head>
-  <body style="margin: 0">
+  <body>
     <div id="root"></div>
-
   </body>
 </html>
