--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" href="./css/utils.css" />
+  <link rel="stylesheet" href="./css/global.css" />
   <title>Linkbrary</title>
 </head>
 
